--- a/assignment/assignment.ipynb
+++ b/assignment/assignment.ipynb
@@ -38,6 +38,180 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 1.\n",
+    "- We know that $m(X)$ can be written as:\n",
+    "\n",
+    "$$\n",
+    "\\dfrac{1}{N} \\sum_{i=1}^{N} x_i\n",
+    "$$\n",
+    "\n",
+    "- So, we can rewrite $m(a + bX)$ as :\n",
+    "\n",
+    "$$\n",
+    "m(a + bX) = \\dfrac{1}{N} \\sum_{i=1}^{N} (a + b x_i)\n",
+    "$$\n",
+    "\n",
+    "- We can now split this into:\n",
+    "\n",
+    "$$\n",
+    "m(a + bX) = \\dfrac{1}{N} \\sum_{i=1}^{N} a + \\dfrac{1}{N} \\sum_{i=1}^{N} b x_i\n",
+    "$$\n",
+    "\n",
+    "- We can factor out our constants:\n",
+    "\n",
+    "$$\n",
+    "m(a + bX) = a \\times \\left( \\dfrac{1}{N} \\sum_{i=1}^{N} 1 \\right) + b \\times \\left( \\dfrac{1}{N} \\sum_{i=1}^{N} x_i \\right)\n",
+    "$$\n",
+    "\n",
+    "- We can write the first term as so because the summation of ones up to $N$ is just $N$, and we can substitute $m(X)$ back in for the second term:\n",
+    "\n",
+    "$$\n",
+    "m(a + bX) = a \\times 1 + b \\times m(X)\n",
+    "$$\n",
+    "\n",
+    "- We have shown:\n",
+    "\n",
+    "$$\n",
+    "m(a + bX) = a + b \\times m(X).\n",
+    "$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2. \n",
+    "- We know that the sample covariance of $X$ and $Y$ is defined as:\n",
+    "\n",
+    "  $$\n",
+    "  \\text{cov}(X,Y) = \\dfrac{1}{N} \\sum_{i=1}^{N} (x_i - m(X))(y_i - m(Y))\n",
+    "  $$\n",
+    "\n",
+    "- So, we can rewrite $\\text{cov}(X, a + bY)$ as:\n",
+    "\n",
+    "  $$\n",
+    "  \\text{cov}(X, a + bY) = \\dfrac{1}{N} \\sum_{i=1}^{N} (x_i - m(X))((a + b y_i) - m(a + bY))\n",
+    "  $$\n",
+    "\n",
+    "- We can now expand the second term inside the summation:\n",
+    "\n",
+    "  $$\n",
+    "  \\text{cov}(X, a + bY) = \\dfrac{1}{N} \\sum_{i=1}^{N} (x_i - m(X)) \\left( a + b y_i - m(a + bY) \\right)\n",
+    "  $$\n",
+    "\n",
+    "- We know from our previous proof that:\n",
+    "\n",
+    "  $$\n",
+    "  m(a + bY) = a + b m(Y)\n",
+    "  $$\n",
+    "\n",
+    "- Substituting this in, we get:\n",
+    "\n",
+    "  $$\n",
+    "  \\text{cov}(X, a + bY) = \\dfrac{1}{N} \\sum_{i=1}^{N} (x_i - m(X)) \\left( a + b y_i - (a + b m(Y)) \\right)\n",
+    "  $$\n",
+    "\n",
+    "- Since $ a $ is a constant, it cancels out:\n",
+    "\n",
+    "  $$\n",
+    "  \\text{cov}(X, a + bY) = \\dfrac{1}{N} \\sum_{i=1}^{N} (x_i - m(X)) \\left( b (y_i - m(Y)) \\right)\n",
+    "  $$\n",
+    "\n",
+    "- We can factor $ b $ out of the summation:\n",
+    "\n",
+    "  $$\n",
+    "  \\text{cov}(X, a + bY) = b \\times \\dfrac{1}{N} \\sum_{i=1}^{N} (x_i - m(X))(y_i - m(Y))\n",
+    "  $$\n",
+    "\n",
+    "- Recognizing the remaining term as $\\text{cov}(X, Y)$, we conclude:\n",
+    "\n",
+    "  $$\n",
+    "  \\text{cov}(X, a + bY) = b \\times \\text{cov}(X, Y).\n",
+    "  $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3. \n",
+    "- We know that the sample covariance of two variables $X$ and $Y$ is defined as:\n",
+    "\n",
+    "  $$\n",
+    "  \\text{cov}(X,Y) = \\dfrac{1}{N} \\sum_{i=1}^{N} (x_i - m(X))(y_i - m(Y))\n",
+    "  $$\n",
+    "\n",
+    "- So, we can rewrite $\\text{cov}(a + bX, a + bX)$ as:\n",
+    "\n",
+    "  $$\n",
+    "  \\text{cov}(a + bX, a + bX) = \\dfrac{1}{N} \\sum_{i=1}^{N} ((a + b x_i) - m(a + bX)) ((a + b x_i) - m(a + bX))\n",
+    "  $$\n",
+    "\n",
+    "- From our previous proof, we know that:\n",
+    "\n",
+    "  $$\n",
+    "  m(a + bX) = a + b m(X)\n",
+    "  $$\n",
+    "\n",
+    "- Substituting this in:\n",
+    "\n",
+    "  $$\n",
+    "  \\text{cov}(a + bX, a + bX) = \\dfrac{1}{N} \\sum_{i=1}^{N} (a + b x_i - (a + b m(X))) (a + b x_i - (a + b m(X)))\n",
+    "  $$\n",
+    "\n",
+    "- Since $ a $ is a constant, it cancels out:\n",
+    "\n",
+    "  $$\n",
+    "  \\text{cov}(a + bX, a + bX) = \\dfrac{1}{N} \\sum_{i=1}^{N} (b (x_i - m(X))) (b (x_i - m(X)))\n",
+    "  $$\n",
+    "\n",
+    "- Factoring out $ b $ from both terms:\n",
+    "\n",
+    "  $$\n",
+    "  \\text{cov}(a + bX, a + bX) = b^2 \\times \\dfrac{1}{N} \\sum_{i=1}^{N} (x_i - m(X)) (x_i - m(X))\n",
+    "  $$\n",
+    "\n",
+    "- Recognizing the remaining sum as the definition of the sample variance:\n",
+    "\n",
+    "  $$\n",
+    "  s^2 = \\dfrac{1}{N} \\sum_{i=1}^{N} (x_i - m(X))^2\n",
+    "  $$\n",
+    "\n",
+    "- We conclude:\n",
+    "\n",
+    "  $$\n",
+    "  \\text{cov}(a + bX, a + bX) = b^2 s^2.\n",
+    "  $$\n",
+    "\n",
+    "- In particular, since $\\text{cov}(X,X) = s^2$, we have:\n",
+    "\n",
+    "  $$\n",
+    "  \\text{cov}(a + bX, a + bX) = b^2 \\text{cov}(X,X).\n",
+    "  $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 4.\n",
+    "\n",
+    "A non-decreasing transformation preserves the order of the data, so if you take the median of $X$ and then apply the transformation, you get the same result as if you applied the transformation first and then found the median. This works for any quantile, not just the median. However, measures like the IQR or the overall range involve differences between quantiles or extreme values, and a non-linear transformation can distort these differences, so the same property does not hold for them unless the transformation is linear.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 5.\n",
+    "\n",
+    "This is true if $g$ is strictly increasing, and if it preserves order without flattening out any values. The median of $g(X)$ is just $g$ applied to the median of $X$. However, if $g$ is only non-decreasing, then this can fail because the transformation might collapse different values, so $m(g(X))$ may not equal $g(m(X))$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Q2.** This question looks at financial transfers from foreign entities to American universities. In particular, from which countries and giftors are the gifts coming from, and to which institutions are they going? For this question, `.groupby([vars]).count()` and `.groupby([vars]).sum()` will be especially useful to tally the number of occurrences and sum the values of those occurrences.\n",
     "\n",
     "1. Load the `./data/ForeignGifts_edu.csv` dataset.\n",
@@ -51,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +367,7 @@
        "4      SAUDI ARABIA       Saudi Arabia Education Mission  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +501,7 @@
        "[Text(0.5, 1.0, 'KD Plot for Logarithm of Foreign Gift Amount')]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -354,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +686,7 @@
        "14            TAIWAN    381"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -527,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +828,7 @@
        "14             AUSTRALIA            248409202"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -796,7 +970,7 @@
        "14  University of Texas MD Anderson Cancer Center            301527419"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -811,14 +985,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/rw/kqv4w2bj5hx2v1ln61zfm4pr0000gn/T/ipykernel_33594/2410943920.py:4: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+      "/var/folders/rw/kqv4w2bj5hx2v1ln61zfm4pr0000gn/T/ipykernel_35701/2410943920.py:4: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
       "  fig.set_xticklabels(fig.get_xticklabels(), rotation=90)\n"
      ]
     },
@@ -842,7 +1016,7 @@
        " Text(14, 0, 'University of Texas MD Anderson Cancer Center')]"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -866,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -993,7 +1167,7 @@
        "14        Royal Embassy of Saudi Arabia             67062486"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
